--- a/amplify.yml
+++ b/amplify.yml
@@ -1,26 +1,31 @@
 
 version: 1
-applications:
-  - appRoot: .
-    frontend:
-      phases:
-        preBuild:
-          commands:
-            - npm ci --cache .npm --prefer-offline
-        build:
-          commands:
-            - npm run build
-      artifacts:
-        baseDirectory: dist
-        files:
-          - '**/*'
-      cache:
-        paths:
-          - .npm/**/*
+frontend:
+  phases:
+    preBuild:
+      commands:
+        - npm ci --cache .npm --prefer-offline
+    build:
+      commands:
+        # Amplify Environment Variables → .env.production に書き出す
+        - echo "VITE_HEYGEN_SERVER_URL=$VITE_HEYGEN_SERVER_URL" >> .env.production
+        - echo "VITE_HEYGEN_API_KEY=$VITE_HEYGEN_API_KEY" >> .env.production
+        
+        # Vite build
+        - npm run build
 
-    # (バックエンドがなければ空でOK)
-    backend:
-      phases:
-        build:
-          commands: []
+  artifacts:
+    baseDirectory: dist
+    files:
+      - "**/*"
+
+  cache:
+    paths:
+      - .npm/**/*
+      - node_modules/**/*
+
+backend:
+  phases:
+    build:
+      commands: []
 
